<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="27sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/outline_strock_warning"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_title"
                android:textColor="#E91E63"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_1"
                android:textColor="#FFC107"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_2"
                android:textColor="#FFC107"
                android:textSize="14sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_3"
                android:textColor="#FFC107"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_4"
                android:textColor="#FFC107"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_5"
                android:textColor="#FFC107"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_6"
                android:textColor="#FFC107"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notice_7"
                android:textColor="#FFC107"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/notice_8"
                android:textColor="#FFC107"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_box_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/outline_strock"
            android:gravity="center"
            android:hint="Enter the units Expense here"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:textColorHint="#56FFFFFF" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate Bill"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btn_ripple_effect"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/outline_strock"
            android:gravity="center"
            android:textColorHint="#56FFFFFF"
            android:hint="Result Display"
            android:textSize="22sp"
            android:layout_marginVertical="30dp"
            android:textColor="@color/white"
            android:id="@+id/tvDisplay"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/btn_ripple_effect"
            android:textSize="20sp"
            />
    </LinearLayout>
</ScrollView>